docs: record Session 6 build fix; bump PipePipeClient to Unit-C
Baseline Nix build now succeeds (Phase 1 done, 7/7). Phase 4 Unit-C
compile-verified and committed on the client (8ed625702); bump the gitlink.
Tracker corrects the Session-5 biased-locking misdiagnosis and records the
real root cause (gcc-15-miscompiled source jdk11) + the Temurin fix.